# ormlite

./: .gitignore  Cargo.toml  Justfile  LICENSE.md  README.md
.github/: package
.github/workflows/: release.yaml  test.yaml
attr/: Cargo.toml  Justfile
attr/src/: attr.rs  cfg_attr.rs  derive.rs  error.rs  ext.rs  ident.rs  lib.rs  metadata.rs  repr.rs  syndecode.rs  ttype.rs
attr/src/metadata/: column.rs  insert.rs  mod.rs  model.rs  table.rs
attr/src/syndecode/: args.rs  derive.rs  properties.rs
cli/: Cargo.toml  Justfile
cli/src/: command.rs  config.rs  main.rs  schema.rs  syndecode.rs  util.rs
cli/src/command/: down.rs  info.rs  init.rs  migrate.rs  reflect.rs  up.rs
cli/src/command/reflect/: schema.mysql.sql  schema.postgres.sql  schema.sqlite.sql
cli/src/syndecode/: args.rs  derive.rs  error.rs  properties.rs
core/: Cargo.toml  Justfile
core/src/: config.rs  error.rs  insert.rs  join.rs  kvec.rs  lib.rs  model.rs  schema.rs
core/src/query_builder/: args.rs  mod.rs  placeholder.rs  select.rs  util.rs
macro/: Cargo.toml  Justfile
macro/src/: attr.rs  codegen.rs  lib.rs  metadata.rs  util.rs
macro/src/codegen/: common.rs  from_row.rs  insert.rs  insert_model.rs  into_arguments.rs  join_description.rs  meta.rs  mod.rs  model.rs  model_builder.rs  mysql.rs  postgres.rs  select.rs  sqlite.rs  update.rs
macro_derive_enum/: Cargo.toml
macro_derive_enum/src/: lib.rs
ormlite/: Cargo.toml  Justfile  README.md
ormlite-bench/: Cargo.toml
ormlite-bench/benches/: leaderboard.rs
ormlite-core/: Cargo.toml  Justfile
ormlite-core/src/: error.rs  export.rs  lib.rs  model.rs  query_builder.rs
ormlite-core/src/query_builder/: args.rs  mod.rs  placeholder.rs  select.rs  util.rs
ormlite-macro/: Cargo.toml  Justfile  README.md
ormlite-macro/src/: attr.rs  lib.rs  util.rs
ormlite-macro/src/codegen/: common.rs  mod.rs  postgres.rs  sqlite.rs
ormlite-macro/tests/: 01-exists.rs  02-table-name-attr.rs  suite.rs
ormlite/examples/: expand.rs  expandable.rs  many-to-one.rs  simple.rs
ormlite/src/: export.rs  lib.rs  model.rs
ormlite/src/handwritten/: diesel.rs  mod.rs  seaorm.rs
ormlite/tests/: 01-exists.rs  01-update-partial.rs  02-many-to-one.rs  03-many-to-many.rs  04-one-to-many.rs  multiple-databases.rs  postgres.rs  run.rs  setup.rs  simple.rs  sqlite.rs  suite.rs  table-meta.rs
ormlite/tests/incomplete_tests/multiple_databases/: 03-many-to-many.rs  04-one-to-many.rs  main.rs  multiple-databases.rs
ormlite/tests/multifile/: main.rs  organization.rs  user.rs
ormlite/tests/postgres/: complex.rs  join.rs
ormlite/tests/sqlite/: 01-table-meta.rs  02-update-partial.rs  03-many-to-one-join.rs  04-allow-clone-primary-key.rs  05-keyword-column.rs  06-insert.rs  06-insertable.rs
ormlite/wip/: many-to-one.rs
src/: lib.rs  main.rs  select.rs
