[workspace]
resolver = "2"
members = ["macro", "core", "ormlite", "cli"]

[workspace.dependencies]
anyhow = "1"
futures = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
proc-macro2 = "1.0.92"
serde = { version = "1.0.217", features = ["derive"] }
sqlmo = "0.22.7"
sqlx = "0.8.2"
sqlx-core = "0.8.2"
syn = "2.0.94"
ormlite-core = { path = "core", version="0.22" }
ormlite-attr = { path = "attr", version="0.22" }
ormlite-macro = { path = "macro", version="0.22" }
ormlite = { path = "ormlite", version="0.22" }
