[workspace]
resolver = "2"
members = ["macro", "core", "ormlite", "cli"]

[workspace.dependencies]
anyhow = "1"
futures = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
proc-macro2 = "1.0.92"
serde = { version = "1.0.217", features = ["derive"] }
sqlmo = "0.23"
sqlmo_sqlx = "0.23"
sqlx = "0.8.2"
sqlx-core = "0.8.2"
syn = { version = "2.0.94", features = ["full"] }
ormlite-core = { path = "core", version = "0.23" }
ormlite-attr = { path = "attr", version = "0.23" }
ormlite-macro = { path = "macro", version = "0.23" }
ormlite = { path = "ormlite", version = "0.23" }
convert_case = "0.7.1"
quote = "1.0"
itertools = "0.14.0"
