[package]
name = "ormlite-attr"
version = "0.22.2"
edition = "2021"
description = "See `ormlite`."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"
homepage = "https://github.com/kurtbuilds/ormlite"
documentation = "https://docs.rs/ormlite"

[lib]
doctest = false

[features]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full"] }
structmeta = "0.3.0"
convert_case = "0.6"
anyhow = "1.0"
ignore = "0.4"
sqlmo = "0.22"
tracing = "0.1"
sqlformat = "=0.2.6"

[dev-dependencies]
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
