[package]
name = "ormlite-attr"
version = "0.23.0"
edition = "2021"
description = "See `ormlite`."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"
homepage = "https://github.com/kurtbuilds/ormlite"
documentation = "https://docs.rs/ormlite"

[lib]
doctest = false

[features]

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
structmeta = "0.3.0"
convert_case.workspace = true
anyhow.workspace = true
ignore = "0.4"
sqlmo.workspace = true
tracing = "0.1"
sqlformat = "=0.2.6"

[dev-dependencies]
syn = { version = "2.0.79", features = ["full", "extra-traits"] }
