[package]
name = "ormlite-cli"
version = "0.22.9"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[[bin]]
name = "ormlite"
path = "src/main.rs"

[features]
#mysql = ["sqlx/mysql"]
#sqlite = ["sqlx/sqlite"]
#postgres = ["sqlx/postgres"]
#runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
default = [
    "ormlite/postgres",
    "ormlite/uuid",
    "ormlite/time",
    "ormlite/json",
    "ormlite/chrono",
    "ormlite/runtime-tokio-rustls",
]
experimental-sid = []

[dependencies]
anyhow.workspace = true
time = { version = "0.3", features = ["formatting"] }
clap = { version = "4", features = ["derive"] }
ormlite.workspace = true
ormlite-core.workspace = true
ormlite-attr.workspace = true
tokio = { version = "1", features = ["full"] }
sqlmo = { version = "0.22", features = ["tracing"] }
sqlmo_sqlx = "0.22.0"
syn = "2"
proc-macro2 = "1"
url = "2"
sha2 = "0.10"
regex = "1"
colored = "2"
tracing-subscriber = "0.3"
tracing = "0.1"
toml = { version = "0.8.19", features = ["preserve_order"] }
serde = { version = "1.0.210", features = ["derive"] }
indexmap = { version = "2.5.0", features = ["serde"] }
dirs = "5.0.1"

[dev-dependencies]
assert_matches = "1"
