[package]
name = "ormlite-core"
version = "0.22.9"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[features]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
tokio = { version = "1", features = ["full"] }
futures.workspace = true
sqlx.workspace = true
sqlparser = "0.51.0"
thiserror = "1"
sqlmo.workspace = true
ormlite-attr.workspace = true
indexmap.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
syn.workspace = true
serde.workspace = true

[dev-dependencies]
syn = "2"
assert_matches = "1"
uuid = { version = "1", features = ["serde", "v4"] }
