[package]
name = "ormlite-core"
version.workspace = true
edition.workspace = true
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[features]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
futures.workspace = true
sqlx.workspace = true
sqlparser = "0.59.0"
thiserror = "2"
kurtbuilds_sql.workspace = true
ormlite-attr.workspace = true
indexmap.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
syn.workspace = true
serde.workspace = true

[dev-dependencies]
assert_matches = "1"
syn = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
