[package]
name = "ormlite-macro"
version = "0.22.7"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[lib]
proc-macro = true

[features]
postgres = []
sqlite = []
mysql = []
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

default-sqlite = ["sqlite"]
default-postgres = ["postgres"]
default-mysql = ["mysql"]

[dependencies]
syn = { version = "2", features = ["derive", "parsing"] }
quote = "1"
proc-macro2 = "1"
ormlite-core = { path = "../core", version = "0.22.2" }
ormlite-attr = { path = "../attr", version = "0.22" }
sqlx = "0.8.2"
lazy_static = "1"
once_cell = "1"
itertools = "0.13.0"
heck = "0.5"
