[package]
name = "ormlite-macro"
version = "0.23.1"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[lib]
proc-macro = true

[features]
postgres = []
sqlite = []
mysql = []
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

default-sqlite = ["sqlite"]
default-postgres = ["postgres"]
default-mysql = ["mysql"]

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
ormlite-core.workspace = true
ormlite-attr.workspace = true
sqlx.workspace = true
itertools.workspace = true
convert_case.workspace = true
