[package]
name = "ormlite-core"
version = "0.1.2"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[features]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]

runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
datetime = "0.5.2"
env_logger = "0.9.0"
futures-core = "0.3.19"
log = "0.4.14"
tokio = { version = "1", features = ["full"] }
futures = "0.3.19"
sqlx = "0.5.9"
sqlparser = "0.13.0"
thiserror = "1.0.30"
