[package]
name = "ormlite-macro"
version = "0.1.0"
edition = "2021"
autotests = false

[lib]
proc-macro = true

[[bin]]
name = "1"
path = "tests/01-exists.rs"

[[bin]]
name = "2"
path = "tests/02-table-name-attr.rs"

[[test]]
name = "tests"
path = "tests/suite.rs"

[features]
postgres = []
sqlite = []
mysql = []
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["derive", "parsing"] }
ormlite-core = { version = "0.1.0" }
derive_builder = "0.10.2"
sqlx = { version = "0.5.9" }