[package]
name = "ormlite-macro"
version = "0.1.0"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[lib]
proc-macro = true

[features]
postgres = []
sqlite = []
mysql = []
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["derive", "parsing"] }
ormlite-core = { version = "0.1.0" }
derive_builder = "0.10.2"
sqlx = { version = "0.5.9" }
