[package]
name = "ormlite-macro"
version = "0.2.6"
edition = "2021"
description = "An ORM for people who love SQL. Use the `ormlite` crate, not this one."
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"

[lib]
proc-macro = true

[features]
postgres = []
sqlite = []
mysql = []
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]

[dependencies]
proc-macro2 = "1.0.34"
quote = "1.0.10"
syn = { version = "1.0.82", features = ["derive", "parsing"] }
ormlite-core = { version = "0.1.0" }
derive_builder = "0.10.2"
sqlx = { version = "0.5.13" }
#sqlx-macros = { version = "0.5.13" , default-features = false }
structmeta = "0.1.4"
