[package]
name = "ormlite"
version = "0.11.0"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "An ORM for people who love SQL"
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"
homepage = "https://github.com/kurtbuilds/ormlite"
documentation = "https://docs.rs/ormlite"
autotests = false
readme = "../README.md"
autoexamples = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--all-features"]

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

# Work in progress and not working yet
#[[test]]
#name = "multiple-databases"
#path = "tests/multiple-databases.rs"
#required-features = ["sqlite", "postgres"]

[features]
mysql = ["sqlx/mysql", "ormlite-macro/mysql"]
sqlite = ["sqlx/sqlite", "ormlite-macro/sqlite", "ormlite-core/sqlite"]
postgres = ["sqlx/postgres", "ormlite-macro/postgres", "ormlite-core/postgres"]
runtime-tokio-rustls = ["ormlite-macro/runtime-tokio-rustls", "sqlx/runtime-tokio-rustls", "ormlite-core/runtime-tokio-rustls"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/decimal"]
chrono = ["sqlx/chrono"]
time = ["sqlx/time"]
json = ["sqlx/json"]
default = ["runtime-tokio-rustls"]

# When you have multiple databases configured, you can use the default-<db> feature to
# set which database the macros will use by default.
# Use the `#[orm(database = "postgres")]` attribute to override the default.
# Use the attribute multiple times to generate code for multiple databases.
default-postgres = ["postgres", "ormlite-macro/default-postgres"]
default-sqlite = ["sqlite", "ormlite-macro/default-sqlite"]
default-mysql = ["mysql", "ormlite-macro/default-mysql"]

[dependencies]
sqlx = { version = "0.6.2" }
tokio = { version = "1.24.1", features = ["full"] }
ormlite-macro = { path = "../macro" , version = "0.11.0"}
ormlite-core = { path = "../core" , version = "0.11.0"}
sqlx-core = "0.6.2"
sqlmo = { version = "0.10" }

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
env_logger = "0.10.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
serde = { version = "1.0.130", features = ["derive"] }
