[package]
name = "ormlite"
version = "0.22.1"
edition = "2021"
authors = ["Kurt Wolf <kurtwolfbuilds@gmail.com>"]
description = "An ORM for people who love SQL"
license = "MIT"
repository = "https://github.com/kurtbuilds/ormlite"
homepage = "https://github.com/kurtbuilds/ormlite"
documentation = "https://docs.rs/ormlite"
autotests = false
readme = "../README.md"
keywords = ["sqlite", "postgres", "orm", "async", "mysql"]
categories = ["database"]
# autoexamples = false

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[[test]]
name = "sqlite"
path = "tests/sqlite.rs"
required-features = ["sqlite"]

[[test]]
name = "simple"
path = "tests/simple.rs"
required-features = ["sqlite"]

[[test]]
name = "postgres"
path = "tests/postgres.rs"
required-features = ["postgres"]

[features]
mysql = ["sqlx/mysql", "ormlite-macro/mysql"]
sqlite = ["sqlx/sqlite", "ormlite-macro/sqlite", "ormlite-core/sqlite"]
postgres = ["sqlx/postgres", "ormlite-macro/postgres", "ormlite-core/postgres"]
runtime-tokio-rustls = ["ormlite-macro/runtime-tokio-rustls", "sqlx/runtime-tokio-rustls", "ormlite-core/runtime-tokio-rustls"]
uuid = ["sqlx/uuid"]
decimal = ["sqlx/rust_decimal"]
chrono = ["sqlx/chrono"]
time = ["sqlx/time"]
json = ["sqlx/json"]
default = ["runtime-tokio-rustls"]

# When you have multiple databases configured, you can use the default-<db> feature to
# set which database the macros will use by default.
# Use the `#[orm(database = "postgres")]` attribute to override the default.
# Use the attribute multiple times to generate code for multiple databases.
default-postgres = ["postgres", "ormlite-macro/default-postgres"]
default-sqlite = ["sqlite", "ormlite-macro/default-sqlite"]
default-mysql = ["mysql", "ormlite-macro/default-mysql"]

[dependencies]
sqlx = { version = "0.8.2" }
tokio = { version = "1.40.0", features = ["full"] }
ormlite-macro = { path = "../macro" , version = "0.22.1" }
ormlite-core = { path = "../core" , version = "0.22.1" }
sqlx-core = "0.8.2"
sqlmo = "0.22"
tokio-stream = "0.1.16"

[dev-dependencies]
trybuild = { version = "1.0.99", features = ["diff"] }
env_logger = "0.11.5"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
serde = { version = "1.0.210", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
